  restart SQuirreL for plugin change to take effect.
  
- Added 'Use PK' button on the "Edit Where clause" dialog which will cause only
  PK columns to be used for updating rows in the table contents panel.
- Added "All Objects" to alias properties.
- Use the last directory that a file was imported from when importing 
  additional files for binary fields.

1731251: (Cryptic exceptions with DB2 JCC driver) Provides an API to allow 
plugin authors to create and register custom exception formatters to be used 
when displaying error messages and the like in the session message panel.

Finished German translation

Bug-Fixes:
1716859 Can't see data in content tab or row count tab (MS SQLServer databases
        with a dash ("-") in their name would cause the content tab or row count
        tabs to render no data.

1714476 (DB copy uses wrong case for table names) The copy operation would
         sometimes fail to select records from the source table.  Since the
         case for the source table is always known to be correct, the plugin
         no longer erroneously attempts to correct the case.

1714475: (Adding rows from the content tab)  When inserting row data, pay 
         attention to isAutoIncrement flag so that these columns are excluded 
         like rowId columns.  After insert, refresh the table data so that 
         auto-generated fields are populated.

1704798 ISQLExecutionListeners cannot return "null"

1701380 addSQLExecutionListener is broken

1700093 Formatter fails for insert script with multiple subselects

1699294 Squirrel imports BLOB, but does not update data 

138092 (PostgreSQL table types) Now PostgreSQL table types list and object tree
       exclude "SYSTEM INDEX" type.  Treating these objects as tables causes 
       lots of SQLExceptions from the PostgreSQL jdbc driver.

Refactoring Plugin:
 - When building a new TableColumnInfo, if the defaultValue textfield is blank, 
   then make the default value be null.
